<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/kripto_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gambar10" />

            <TextView
                android:id="@+id/title_detail"

                android:layout_width="372dp"
                android:layout_height="82dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/title_news"
                android:textColor="#F1ECEC"
                android:textSize="20sp"
                app:autoSizeMinTextSize="5sp" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/kripto_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/author_name"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/date_released"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="20dp"
            android:text="@string/date_released"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:text="@string/news_text"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>